# encurtador-url

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
src/url_shortener/: api.py  config.py  database.py  frontend.py  main.py  models.py  repository.py  schemas.py  service.py
src/url_shortener/static/: app.js  index.html  styles.css
tests/: test_api.py
