[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "encurtador-url"
version = "0.1.0"
description = "Aplicação web para encurtar URLs, criada com FastAPI e SQLAlchemy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.29",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
url_shortener = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
